Chromium ui_tests WorkerTest.WorkerMessagePort[GC] were broken by https://bugs.webkit.org/attachment.cgi?id=112342 https://bugs.webkit.org/show_bug.cgi?id=70953

Patch by Dave Michael <dmichael@chromium.org> on 2011-10-27
Reviewed by David Levin.

* src/PlatformMessagePortChannel.cpp:
(WebCore::PlatformMessagePortChannel::hasPendingActivity):

Canonical link: https://commits.webkit.org/87211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98566 268f45cc-cd09-0410-ab3c-d52691b4dbfc